--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -63,7 +63,7 @@
     
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-            <a href="#" class="navbar-brand p-0">
+            <a href="{% url 'admin:index' %}" class="navbar-brand p-0">
                 <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>EME</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -87,6 +87,7 @@
                     </div>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                     <a href="{% url 'kozi' %}" class="nav-item nav-link">Kozi</a>
+                   
                 </div>
             </div>
         </nav>
