--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -64,8 +64,10 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
             <a href="{% url 'admin:index' %}" class="navbar-brand p-0">
-                <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>EME</h1>
+                <h1 class="m-0 text-uppercase text-primary"><img src="{% static 'img/ebe.jpg' %}" class="img-fluid rounded" style="width:92px; height:92px">EME</h1>
             </a>
+
+            <!-- <i class="far fa-smile text-primary me-2"></i> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
