--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -38,8 +38,8 @@
                             <i class="fa fa-user-tie fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Malengo ya Taasisi</h3>
-                            <p class="mb-0">Malengo ya Taasisi kwa kifupi</p>
+                            <h3>Elimu ya Ufahamu kwa Wote</h3>
+                            <p class="mb-0">Tunatoa mafunzo ya kina kuhusu kuboresha hali ya akili, kiroho, na kijamii. Huduma zetu zinawafaidi watu wa rika zote na kutoka sehemu mbalimbali za maisha.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -47,8 +47,8 @@
                             <i class="fa fa-chart-line fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Miongozo ya Taasisi</h3>
-                            <p class="mb-0">Maelezo mafupi kuhusu Miongozo ya Taasisi</p>
+                            <h3>Ujasiriamali na Kujitegemea</h3>
+                            <p class="mb-0">Tunatoa kozi na mafunzo ya ujasiriamali ili kuwasaidia watu kuanzisha na kuendeleza biashara zao, kuhakikisha wanakuwa na uhuru wa kifedha na maisha bora.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white">
