--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -38,8 +38,14 @@
                             <i class="fa fa-user-tie fs-4"></i>
                         </div>
                         <div class="ps-4">
+                         <h2 style="text-align:center">Miongozo ya Huduma Zetu</h2>
                             <h3>Elimu ya Ufahamu kwa Wote</h3>
                             <p class="mb-0">Tunatoa mafunzo ya kina kuhusu kuboresha hali ya akili, kiroho, na kijamii. Huduma zetu zinawafaidi watu wa rika zote na kutoka sehemu mbalimbali za maisha.</p>
+                        </div>
+
+                      <div class="ps-4">
+                            <h3>Kukuza Maadili na Usawa</h3>
+                            <p class="mb-0">Huduma zetu zinajali maadili ya kiutu, usawa, na haki kwa jamii. Tunajenga jamii imara, yenye mshikamano na ufanisi kwa kuelimisha na kuhamasisha mabadiliko chanya.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -56,8 +62,8 @@
                             <i class="fa fa-balance-scale fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Sehemu ya Ziada</h3>
-                            <p class="mb-0">Sehemu hii nitaweka maelezo mradi utakapokua unaendelea kutengenezwa</p>
+                            <h3>Kuboresha Afya ya Akili</h3>
+                            <p class="mb-0">Tunatoa mafunzo ya kuboresha hali ya akili, kutoa njia bora za kukabiliana na changamoto za akili, kama vile msongo wa mawazo na unywaji pombe, ili watu waweze kufikia mafanikio katika maisha yao</p>
                         </div>
                     </div>
                 </div>
