--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -42,10 +42,10 @@
                             <p class="mb-0">Tunatoa mafunzo ya kina kuhusu kuboresha hali ya akili, kiroho, na kijamii. Huduma zetu zinawafaidi watu wa rika zote na kutoka sehemu mbalimbali za maisha.</p>
                         </div>
 
-                      <div class="ps-4">
+<!--                       <div class="ps-4">
                             <h3>Kukuza Maadili na Usawa</h3>
                             <p class="mb-0">Huduma zetu zinajali maadili ya kiutu, usawa, na haki kwa jamii. Tunajenga jamii imara, yenye mshikamano na ufanisi kwa kuelimisha na kuhamasisha mabadiliko chanya.</p>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="d-flex text-white mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
