--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -26,10 +26,14 @@
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Karibu <span class="text-primary">Eben-ezeri Mind Education</span></h1>
-                <h4 class="text-primary mb-4">Taasisi inayolenga kuboresha na kuimarisha maisha ya watu kwa njia ya kiroho na kimaadili</h4>
-                <p class="mb-4">Taasisi hii imejikita katika kusaidia watu kugundua uwezo wao wa ndani, kukuza maadili mema, na kuwawezesha kuishi kwa amani, furaha, na mafanikio ya kudumu. Kupitia programu zake mbalimbali, Eben-ezeri Mind Education inatoa elimu ya kina kuhusu ufahamu wa kiroho, usimamizi wa hisia, mabadiliko ya tabia, na njia bora za kuimarisha uhusiano wa mtu na jamii inayomzunguka. Lengo letu ni kuwa chombo cha mabadiliko chanya katika jamii, tukilenga kuhamasisha maendeleo ya mtu binafsi kwa mtazamo wa kiroho na kimaadili, ili kujenga jamii yenye mshikamano, heshima, na upendo wa kweli</p>
-                <a href="{% url 'kozi' %}" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Jiunge Nasi</a>
+                <h1 class="display-5 mb-4">Welcome <span class="text-primary">Eben-ezeri Mind Education</span></h1>
+                <p class="mb-4">Eben-ezeri Mind Education (EME) is a leading educational consultancy dedicated to enhancing mental health awareness and personal development in Tanzanian communities. Officially registered under BL01396912024-2500027304, EME is headquartered in Bunju "B" Street, Mabwepande Ward, Kinondoni District, Dar es Salaam. Our mission is to equip individuals with the knowledge and tools needed to overcome psychological challenges, build emotional resilience, and foster overall well-being.</p>
+                    <p>EME primarily supports marginalized communities, youth aged 8 to 30 years, and individuals struggling with mental health issues. Through innovative and accessible educational programs, we strive to create a society where mental wellness and personal growth are prioritized.</p>
+
+                <!-- <h4 class="text-primary mb-4">Taasisi inayolenga kuboresha na kuimarisha maisha ya watu kwa njia ya kiroho na kimaadili</h4> -->
+
+                <!-- <p class="mb-4">Taasisi hii imejikita katika kusaidia watu kugundua uwezo wao wa ndani, kukuza maadili mema, na kuwawezesha kuishi kwa amani, furaha, na mafanikio ya kudumu. Kupitia programu zake mbalimbali, Eben-ezeri Mind Education inatoa elimu ya kina kuhusu ufahamu wa kiroho, usimamizi wa hisia, mabadiliko ya tabia, na njia bora za kuimarisha uhusiano wa mtu na jamii inayomzunguka. Lengo letu ni kuwa chombo cha mabadiliko chanya katika jamii, tukilenga kuhamasisha maendeleo ya mtu binafsi kwa mtazamo wa kiroho na kimaadili, ili kujenga jamii yenye mshikamano, heshima, na upendo wa kweli</p> -->
+                <a href="{% url 'kozi' %}" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Join with us</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
@@ -38,8 +42,8 @@
                             <i class="fa fa-user-tie fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Malengo ya Taasisi</h3>
-                            <p class="mb-0">Malengo ya Taasisi kwa kifupi</p>
+                            <h3>Main Objective</h3>
+                            <p class="mb-0">To improve the mental well-being and economic resilience of individuals and communities through accessible education, training, and support programs that foster psychological strength, personal growth, and financial independence.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -47,8 +51,18 @@
                             <i class="fa fa-chart-line fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Miongozo ya Taasisi</h3>
-                            <p class="mb-0">Maelezo mafupi kuhusu Miongozo ya Taasisi</p>
+                            <h3>Our Goals</h3>
+                            <p class="mb-0">To establish a mentally resilient and economically self-sufficient society by promoting mind education, mental health awareness, and entrepreneurship training, ensuring sustainable and long-term development for Tanzanian communities.</p>
+                        </div>
+                       
+                    </div>
+                    <div class="d-flex text-white">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                            <i class="fa fa-balance-scale fs-4"></i>
+                        </div>
+                        <div class="ps-4">
+                            <h3>Vision</h3>
+                            <p class="mb-0">To create a transformative impact in communities through mind education. We aim to empower individuals by enhancing their psychological and cognitive abilities, enabling them to make informed decisions and lead fulfilling lives.</p>
                         </div>
                     </div>
                     <div class="d-flex text-white">
@@ -56,10 +70,19 @@
                             <i class="fa fa-balance-scale fs-4"></i>
                         </div>
                         <div class="ps-4">
+                            <h3>Mission</h3>
+                            <p class="mb-0">To empower individuals and communities by providing essential knowledge and tools that promote mental well-being, personal growth, and cognitive development, ultimately fostering a healthier and more prosperous society.</p>
+                        </div>
+                    </div>
+                    <!-- <div class="d-flex text-white">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                            <i class="fa fa-balance-scale fs-4"></i>
+                        </div>
+                        <div class="ps-4">
                             <h3>Sehemu ya Ziada</h3>
                             <p class="mb-0">Sehemu hii nitaweka maelezo mradi utakapokua unaendelea kutengenezwa</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
