--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -24,7 +24,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">Eben-ezeri Mind Education</h5>
-                            <h1 class="display-1 text-white mb-md-4">Tunaamini katika Mabadiliko ya Kiroho na Kimaisha</h1>
+                            <h1 class="display-1 text-white mb-md-4">We Believe in Spiritual and Life Transformation</h1>
                             <a href="{% url 'kozi' %}" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Get Courses</a>
                             <a href="{% url 'contact' %}" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
@@ -50,10 +50,10 @@
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">KARIBU <span class="text-primary">Ebenezeri Mind Education</span></h1>
-                <h4 class="text-primary mb-4">Taasisi inayolenga kuboresha na kuimarisha maisha ya watu kwa njia ya kiroho na kimaadili</h4>
-                <p class="mb-4">Taasisi hii imejikita katika kusaidia watu kugundua uwezo wao wa ndani, kukuza maadili mema, na kuwawezesha kuishi kwa amani, furaha, na mafanikio ya kudumu. Kupitia programu zake mbalimbali, Eben-ezeri Mind Education inatoa elimu ya kina kuhusu ufahamu wa kiroho, usimamizi wa hisia, mabadiliko ya tabia, na njia bora za kuimarisha uhusiano wa mtu na jamii inayomzunguka. Lengo letu ni kuwa chombo cha mabadiliko chanya katika jamii, tukilenga kuhamasisha maendeleo ya mtu binafsi kwa mtazamo wa kiroho na kimaadili, ili kujenga jamii yenye mshikamano, heshima, na upendo wa kweli.</p>
-                <a href="{% url 'kozi' %}" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Jiunge nasi</a>
+                <h1 class="display-5 mb-4">Welcome <span class="text-primary">Ebenezeri Mind Education</span></h1>
+                <h4 class="text-primary mb-4">An institution dedicated to improving and strengthening people's lives through spirituality and ethics.</h4>
+                <p class="mb-4">This institution is focused on helping people discover their inner potential, cultivate good values, and empower them to live in peace, happiness, and lasting success. Through its various programs, Ebenezeri Mind Education provides comprehensive education on spiritual awareness, emotional management, behavior transformation, and the best ways to strengthen a person’s relationship with their surrounding community. Our goal is to be a tool for positive change in society, aiming to inspire personal development with a spiritual and ethical perspective, in order to build a community based on unity, respect, and true love.</p>
+                <a href="{% url 'kozi' %}" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Join Us</a>
             </div>
             
         </div>
@@ -64,7 +64,7 @@
     <!-- Services Start -->
     <div class="container-fluid pt-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Huduma Zetu</h1>
+            <h1 class="display-5 mb-0">Our Services</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <div class="row g-5">
@@ -73,12 +73,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-user-tie fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Elimu ya Ufahamu</h3>
-                    <p class="mb-0">Huduma hii inajumuisha masomo na warsha zinazojikita kwenye
-                        Mabadiliko ya mawazo na mitazamo, 
-                        Ujifunzaji wa usimamizi wa hisia na tabia  
-                         
-                        </p>
+                    <h3 class="mb-3">Understanding Education</h3> <p class="mb-0">This service includes lessons and workshops focused on Transforming thoughts and perspectives, Learning emotional and behavioral management. </p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -86,8 +81,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-hands-helping 🤝 fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Kozi za Mabadiliko ya Tabia</h3>
-                    <p class="mb-0">Kozi hizi zinalenga kumsaidia mtu kuachana na tabia za zamani zisizofaa, kama vile uraibu wa pombe, madawa ya kulevya</p>
+                    <h3 class="mb-3">Behavioral Change Courses</h3> <p class="mb-0">These courses are designed to help individuals break free from undesirable old habits, such as alcohol addiction and drug abuse.</p>
                 </div>
             </div>
             
@@ -97,8 +91,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-praying-hands 🙏 fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Ushauri wa Kiroho</h3>
-                    <p class="mb-0">Huduma hii ina lengo la kusaidia mtu kupata amani ya ndani, kuelewa makusudi ya maisha yake, na kuishi kwa furaha na utulivu.</p>
+                    <h3 class="mb-3">Spiritual Counseling</h3> <p class="mb-0">This service aims to help individuals find inner peace, understand the purpose of their lives, and live with happiness and tranquility.</p>
                 </div>
             </div>
            
@@ -110,7 +103,7 @@
     <!-- Features Start -->
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Kwa Nini Ujiunge na EME?</h1>
+            <h1 class="display-5 mb-0">Why Choose EME?</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <div class="row g-5">
@@ -120,30 +113,30 @@
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-cubes fs-4 text-white"></i>
                         </div>
-                        <h3>Mafanikio ya Washiriki</h3>
-                        <p class="mb-0"> Wadau wetu wameweza kubadilisha maisha yao kwa njia chanya. Hii ni kwa sababu ya mbinu zetu za kipekee zinazojumuisha ufahamu wa ndani na mabadiliko ya tabia.</p>
+                        <h3>Holistic Development</h3>
+                        <p class="mb-0">We integrate psychological and economic empowerment to create well-rounded individuals.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="far fa-smile-beam fs-4 text-white"></i>
                         </div>
-                        <h3>Huduma Zenye Ubora</h3>
-                        <p class="mb-0">Tunatoa huduma zenye ubora na ufanisi wa hali ya juu, kupitia wataalamu wa kiroho na kisaikolojia ambao wamejizatiti katika kutoa msaada wa kina</p>
+                        <h3>Expert-Led Programs</h3>
+                        <p class="mb-0">Our team consists of experienced professionals in mental health, personal development, and entrepreneurship.</p>
                     </div>
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-award fs-4 text-white"></i>
                         </div>
-                        <h3>Mbinu za Kisasa</h3>
-                        <p class="mb-0">Tunatumia mbinu za kisasa katika kutoa huduma zetu, ikiwa ni pamoja na matumizi ya teknolojia na huduma za mtandaoni ili kufikia watu wengi zaidi</p>
+                        <h3>Community Focused</h3>
+                        <p class="mb-0">We tailor our programs to support marginalized and vulnerable groups, ensuring no one is left behind.</p>
                     </div>
 
                     <div class="col-12">
                         <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="far fa-smile-beam fs-4 text-white"></i>
                         </div>
-                        <h3>Ushuhuda wa Washiriki</h3>
-                        <p class="mb-0">Wateja wetu wameshuhudia mabadiliko halisi katika maisha yao, na wanatoa ushuhuda wa matokeo ya kudumu na chanya kutoka kwa huduma zetu.</p>
+                        <h3>Testimonials from Participants</h3>
+                        <p class="mb-0">Our clients have experienced real transformations in their lives and provide testimonials of lasting and positive results from our services.</p>
                     </div>
                    
                 </div>
@@ -153,11 +146,11 @@
                     <img class="img-fluid" src="{% static 'img/admin.jpg' %}" alt="">
                     <div class="p-4">
                         <p class="text-white mb-4">
-                            Nashukuru kwa kuungana nasi katika safari hii ya kiroho na kiakili kupitia Eben-ezeri Mind Education. Mimi ni Enock Mussa Bugal, mwasisi wa taasisi hii, nikiwa na maono ya kusaidia watu kugundua uwezo wao wa ndani, kupata utulivu, amani, na mafanikio ya kiroho.
+                            I appreciate you joining us on this spiritual and intellectual journey through Eben-ezeri Mind Education. I am Enock Mussa Bugal, the founder of this institution, with a vision to help people discover their inner potential, attain peace, tranquility, and spiritual success.
 
-Dhamira yetu ni kuwaongoza kwenye mabadiliko chanya ya maisha kwa kuimarisha mtazamo wa kiakili na kiroho. Mabadiliko ya kweli huanza ndani yako!
+Our mission is to guide you toward positive life transformation by strengthening your mental and spiritual perspective. True change begins within you!
 
-Asante kwa kuwa sehemu ya safari hii. Mungu awabariki.</p>
+Thank you for being part of this journey. May God bless you.</p>
                         <a href="" class="btn btn-light py-md-3 px-md-5 rounded-pill mb-2">Learn More</a>
                     </div>
                 </div>
@@ -173,9 +166,9 @@ Asante kwa kuwa sehemu ya safari hii. Mungu awabariki.</p>
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Jinsi ya Kujiunga na Huduma Zetu</h1>
-                <p class="mb-4"><b>1. Jisajili kwa Kozi Zetu:</b><br> Tembelea sehemu ya <u>Kozi</u> kwenye website yetu na jisajili kwa kozi inayokufaa. Tunatoa kozi za mtandaoni na pia kozi za ana kwa ana.<br>
-                    <b>2. Ushauri wa Kiroho:</b> Ikiwa unahitaji msaada wa moja kwa moja, unaweza kuwasiliana nasi kwa ajili ya <u>ushauri wa kiroho</u> na usimamizi wa tabia.</p>
+                <h1 class="display-5 mb-4">How to Join Our Services</h1>
+                <p class="mb-4"><b>1. Register for Our Courses:</b><br> Visit the <u>Courses</u> section on our website and register for a course that suits you. We offer both online and in-person courses.<br>
+                    <b>2. Spiritual Counseling:</b> If you need direct assistance, you can contact us for <u>spiritual counseling</u> and behavior management.
                 <form>
                     <div class="row gx-3">
                         <div class="col-6">
@@ -206,11 +199,11 @@ Asante kwa kuwa sehemu ya safari hii. Mungu awabariki.</p>
                     </div>
                 </form>
             </div>
-            <div class="col-lg-6" style="min-height: 400px;">
+            <!-- <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute w-100 h-100" src="{% static 'img/universe.jpg' %}" style="object-fit: cover;">
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Quote End -->
@@ -220,7 +213,7 @@ Asante kwa kuwa sehemu ya safari hii. Mungu awabariki.</p>
     
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Team ya Washiriki wa Taasisi hii</h1>
+            <h1 class="display-5 mb-0">The Institution's Team Members</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
 
@@ -246,13 +239,13 @@ Asante kwa kuwa sehemu ya safari hii. Mungu awabariki.</p>
     <!-- Testimonial Start -->
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
-            <div class="col-lg-6" style="min-height: 500px;">
+            <!-- <div class="col-lg-6" style="min-height: 500px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute w-100 h-100" src="{% static 'img/prayer.png' %}" style="object-fit: cover;">
                 </div>
-            </div>
+            </div> -->
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Shuhuda Mbalimbali Za Washiriki</h1>
+                <h1 class="display-5 mb-4">Testimonials from Participants</h1>
                 <div class="owl-carousel testimonial-carousel">
 
                     {% for i in user_testimonial %}
