--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -15,7 +15,7 @@
 </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Karibu NyumbaChap Tanzania</title>
+    <title>Karibu EbenezeriMindeducation</title>
 
     <link rel="shortcut icon" href="{% static 'images/fav.jpg' %}">
     <link rel="stylesheet" href="{% static 'css3/bootstrap.min.css' %}">
