--- a/apps/templates/contact.html
+++ b/apps/templates/contact.html
@@ -10,7 +10,7 @@
     <div class="container-fluid bg-dark p-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-white">Wasiliana nasi</h1>
+                <h1 class="display-4 text-white">Contact Us</h1>
                 <a href="{% url 'home' %}">Home</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="{% url 'kozi' %}">course</a>
@@ -24,7 +24,7 @@
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Kwa Msaada wa Haraka Tutumie Ujumbe</h1>
+                <h1 class="display-5 mb-4">For Immediate Assistance, Send Us a Message</h1>
 
                 {% if ujumbe %}
                 <p style="text-align: center; color:Green;">{{ujumbe}}</p>
@@ -65,10 +65,12 @@
             <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d997891.2013744094!2d39.07888297443588!3d-6.722020308800451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4a2d31c1a27f%3A0x5d5b835cfb6e03d7!2sBunju%20B%2C%20Dar%20es%20Salaam%2C%20Tanzania!5e0!3m2!1sen!2stz!4v1710512345678!5m2!1sen!2stz"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                    </iframe>
                 </div>
             </div>
+            
         </div>
     </div>
     <!-- Contact End -->
@@ -128,7 +130,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">ebenezerimindeducation</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">WebTek</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="https://www.nyumbachap.com">Eben-ezerimindeducation</a>. All Rights Reserved<a class="text-secondary border-bottom" href="https://htmlcodex.com"></a></p>
     </div>
     <!-- Footer End -->
 
