--- a/apps/templates/service.html
+++ b/apps/templates/service.html
@@ -21,7 +21,7 @@
     <!-- Services Start -->
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Huduma Tunazozitoa</h1>
+            <h1 class="display-5 mb-0">The Services We Offer</h1>
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <div class="row g-5">
@@ -51,15 +51,15 @@
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h1 class="display-5 mb-4">Huduma za Moja kwa Moja</h1>
-                <p class="mb-4">Maelekezo namna ya kuwasiliana kwajili ya Huduma za moja kwa moja</p>
+                <h1 class="display-5 mb-4">Direct Services</h1>
+                <p class="mb-4">Guidelines on How to Contact Us for Direct Services</p>
                 <form method="POST">
                     {% csrf_token %}
                     <div class="row gx-3">
                         <div class="col-6">
                             <div class="form-floating">
                                 <input type="text" class="form-control" id="form-floating-1" name="full_name" placeholder="John peter">
-                                <label for="form-floating-1">Jina kamili</label>
+                                <label for="form-floating-1">Full name</label>
                             </div>
                         </div>
                         <div class="col-6">
@@ -71,30 +71,30 @@
                         <div class="col-6">
                             <div class="form-floating mb-3">
                                 <input type="number" class="form-control" id="form-floating-2" name="phone_number" placeholder="255629712678">
-                                <label for="form-floating-2">Namba ya Simu</label>
+                                <label for="form-floating-2">Phone Number</label>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" name="service_type" aria-label="Financial Consultancy">
-                                    <option value="Elimu ya Ufahamu">Elimu ya Ufahamu</option>
-                                    <option value="Kozi za Mabadiliko ya Tabia">Kozi za Mabadiliko ya Tabia</option>
-                                    <option value="Ushauri wa Kiroho">Ushauri wa Kiroho</option>
+                                    <option value="Elimu ya Ufahamu">Understanding Education</option>
+                                    <option value="Kozi za Mabadiliko ya Tabia">Behavioral Change Courses</option>
+                                    <option value="Ushauri wa Kiroho">Spiritual Counseling</option>
                                 </select>
-                                <label for="floatingSelect">Chagua huduma</label>
+                                <label for="floatingSelect">Choose Services</label>
                             </div>
                         </div>
                         <div class="col-6">
-                            <button class="btn btn-primary w-100 h-100" type="submit">Tuma Ombi</button>
+                            <button class="btn btn-primary w-100 h-100" type="submit">Submit</button>
                         </div>
                     </div>
                 </form>
             </div>
-            <div class="col-lg-6" style="min-height: 400px;">
+            <!-- <div class="col-lg-6" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute w-100 h-100" src="{% static 'img/ground.jpg' %}" style="object-fit: cover;">
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Quote End -->
