--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -27,7 +27,7 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Welcome <span class="text-primary">Eben-ezeri Mind Education</span></h1>
-                <p class="mb-4">Eben-ezeri Mind Education (EME) is a leading educational consultancy dedicated to enhancing mental health awareness and personal development in Tanzanian communities. Officially registered under BL01396912024-2500027304, EME is headquartered in Bunju "B" Street, Mabwepande Ward, Kinondoni District, Dar es Salaam. Our mission is to equip individuals with the knowledge and tools needed to overcome psychological challenges, build emotional resilience, and foster overall well-being.</p>
+                <p class="mb-4">Eben-ezeri Mind Education (EME) is a leading educational consultancy dedicated to enhancing mental health awareness and personal development in Tanzanian communities. <br>Officially registered under BL01396912024-2500027304 <br>EME is headquartered in Bunju "B" Street, Mabwepande Ward, Kinondoni District, Dar es Salaam. <br>Our mission is to equip individuals with the knowledge and tools needed to overcome psychological challenges, build emotional resilience, and foster overall well-being.</p>
                     <p>EME primarily supports marginalized communities, youth aged 8 to 30 years, and individuals struggling with mental health issues. Through innovative and accessible educational programs, we strive to create a society where mental wellness and personal growth are prioritized.</p>
 
                 <!-- <h4 class="text-primary mb-4">Taasisi inayolenga kuboresha na kuimarisha maisha ya watu kwa njia ya kiroho na kimaadili</h4> -->
