--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -88,7 +88,7 @@
                       
                     </div>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
-                    <a href="{% url 'kozi' %}" class="nav-item nav-link">Kozi</a>
+                    <a href="{% url 'kozi' %}" class="nav-item nav-link">coarses</a>
                    
                 </div>
             </div>
