--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -175,7 +175,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, DSM, Tanzania</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Bunju "B", DSM, Tanzania</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>ebenezerimindeducation@gmail.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>0678875485</p>
             </div>
