--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -87,10 +87,10 @@
                         <div class="ps-4">
                             <h3>Sehemu ya Ziada</h3>
                             <p class="mb-0">Sehemu hii nitaweka maelezo mradi utakapokua unaendelea kutengenezwa</p>
-=======
+
                             <h3>Kuboresha Afya ya Akili</h3>
                             <p class="mb-0">Tunatoa mafunzo ya kuboresha hali ya akili, kutoa njia bora za kukabiliana na changamoto za akili, kama vile msongo wa mawazo na unywaji pombe, ili watu waweze kufikia mafanikio katika maisha yao</p>
->>>>>>> 0148f3305041877f8444d3870e86b5cc654e6c02
+
                         </div>
                     </div> -->
                 </div>
@@ -175,7 +175,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, DSM, Tanzania</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i> Bunju "B" Street, DSM, Tanzania</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>ebenezerimindeducation@gmail.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>0678875485</p>
             </div>
