--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -211,29 +211,29 @@ Thank you for being part of this journey. May God bless you.</p>
 
     <!-- Team Start -->
     
-    <div class="container-fluid py-6 px-5">
-        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">The Institution's Team Members</h1>
-            <hr class="w-25 mx-auto bg-primary">
-        </div>
-
-        {% for member in team_members %}
-        <div class="row g-5">
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="{{member.image.url}}" alt="">
-                    <div class="team-text w-100 position-absolute top-50     text-center bg-primary p-4">
-                        <h3 class="text-white">{{member.full_name}}</h3>
-                        <p class="text-white text-uppercase mb-0">{{member.designation}}</p>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-           
-        </div>
+    <!-- Team Start -->
+<div class="container-fluid py-6 px-5">
+    <div class="text-center mx-auto mb-5" style="max-width: 600px;">
+        <h1 class="display-5 mb-0">The Institution's Team Members</h1>
+        <hr class="w-25 mx-auto bg-primary">
     </div>
 
-    <!-- Team End -->
+    <div class="row g-5">
+        {% for member in team_members %}
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="team-item position-relative overflow-hidden" style="height: 400px;">
+                <img class="img-fluid w-100 h-100 object-fit-cover" src="{{ member.image.url }}" alt="" style="object-fit: cover;">
+                <div class="team-text w-100 position-absolute bottom-0 text-center bg-primary p-3">
+                    <h3 class="text-white mb-1">{{ member.full_name }}</h3>
+                    <p class="text-white text-uppercase mb-0">{{ member.designation }}</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+<!-- Team End -->
+    
 
 
     <!-- Testimonial Start -->
