--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -224,7 +224,7 @@ Thank you for being part of this journey. May God bless you.</p>
             <div class="team-item position-relative overflow-hidden" style="height: 400px;">
                 <img class="img-fluid w-100 h-100 object-fit-cover" src="{{ member.image.url }}" alt="" style="object-fit: cover;">
                 <div class="team-text w-100 position-absolute bottom-0 text-center bg-primary p-3">
-                    <h3 class="text-white mb-1">{{ member.full_name }}</h3>
+                    <h3 class="mb-1" style="color:black">{{ member.full_name }}</h3>
                     <p class="text-white text-uppercase mb-0">{{ member.designation }}</p>
                 </div>
             </div>
