--- a/apps/templates/about.html
+++ b/apps/templates/about.html
@@ -80,19 +80,7 @@
                             <p class="mb-0">To empower individuals and communities by providing essential knowledge and tools that promote mental well-being, personal growth, and cognitive development, ultimately fostering a healthier and more prosperous society.</p>
                         </div>
                     </div>
-                    <!-- <div class="d-flex text-white">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-balance-scale fs-4"></i>
-                        </div>
-                        <div class="ps-4">
-                            <h3>Sehemu ya Ziada</h3>
-                            <p class="mb-0">Sehemu hii nitaweka maelezo mradi utakapokua unaendelea kutengenezwa</p>
-=======
-                            <h3>Kuboresha Afya ya Akili</h3>
-                            <p class="mb-0">Tunatoa mafunzo ya kuboresha hali ya akili, kutoa njia bora za kukabiliana na changamoto za akili, kama vile msongo wa mawazo na unywaji pombe, ili watu waweze kufikia mafanikio katika maisha yao</p>
->>>>>>> 0148f3305041877f8444d3870e86b5cc654e6c02
-                        </div>
-                    </div> -->
+                   
                 </div>
             </div>
         </div>
@@ -100,44 +88,6 @@
     <!-- About End -->
 
 
-    <!-- Team Start -->
-    <!-- <div class="container-fluid py-6 px-5">
-        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Our Team Members</h1>
-            <hr class="w-25 mx-auto bg-primary">
-        </div>
-        <div class="row g-5">
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- Team End -->
-    
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
@@ -175,9 +125,11 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, DSM, Tanzania</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>Bunju "B" Street, DSM, Tanzania</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>ebenezerimindeducation@gmail.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>0678875485</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+255678875485</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+255785214188</p>
+
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
