--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -52,7 +52,9 @@
                             <p class="m-0"><i class="fa fa-envelope-open me-2"></i>ebenezerimindeducation@gmail.com</p>
                         </div>
                         <div class="py-2">
-                            <p class="m-0"><i class="fa fa-phone-alt me-2"></i>0678875485</p>
+                            <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+255678875485</p>
+                            <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+255785214188</p>
+
                         </div>
                     </div>
                 </div>
@@ -64,7 +66,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
             <a href="{% url 'admin:index' %}" class="navbar-brand p-0">
-                <h1 class="m-0 text-uppercase text-primary"><img src="{% static 'img/ebe.jpg' %}" class="img-fluid rounded" style="width:50px; height:30px">EME</h1>
+                <h1 class="m-0 text-uppercase text-primary"><img src="{% static 'img/ebe.jpg' %}" class="img-fluid rounded" style="width:80px; height:60px"></h1>
             </a>
 
             <!-- <i class="far fa-smile text-primary me-2"></i> -->
@@ -88,7 +90,7 @@
                       
                     </div>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
-                    <a href="{% url 'kozi' %}" class="nav-item nav-link">Kozi</a>
+                    <a href="{% url 'kozi' %}" class="nav-item nav-link">Courses</a>
                    
                 </div>
             </div>
