--- a/apps/templates/courses_2.html
+++ b/apps/templates/courses_2.html
@@ -216,7 +216,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Quick Link</h4>
                     <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="% url 'contact' %}">Contact Us</a>
+                    <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">FAQs & Help</a>
@@ -224,7 +224,9 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Bunju "B", DSM, Tanzania</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0678875485</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255678875485</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+255785214188</p>
+
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>ebenezerimindeducation@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
