--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -39,7 +39,7 @@
             <div class="row gx-0">
                 <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-body py-2 pe-3 border-end" href=""><small>FAQs</small></a>
+                        <a class="text-body py-2 pe-3 border-end" href="{% url 'admin:index' %}"><small>FAQs</small></a>
                         <a class="text-body py-2 px-3 border-end" href=""><small>Support</small></a>
                         <a class="text-body py-2 px-3 border-end" href=""><small>Privacy</small></a>
                         <a class="text-body py-2 px-3 border-end" href=""><small>Policy</small></a>
@@ -65,9 +65,25 @@
     
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-            <a href="{% url 'admin:index' %}" class="navbar-brand p-0">
-                <h1 class="m-0 text-uppercase text-primary"><img src="{% static 'img/ebe.jpg' %}" class="img-fluid rounded" style="width:80px; height:60px"></h1>
-            </a>
+           
+                                
+
+                            {% if logo_link.show_admin_link %}
+                    <a href="{% url 'admin:index' %}" class="navbar-brand p-0">
+                        <h1 class="m-0 text-uppercase text-primary">
+                            <img src="{% static 'img/ebe.jpg' %}" class="img-fluid rounded" style="width:80px; height:60px">
+                        </h1>
+                    </a>
+                {% else %}
+                    <a href="{% url 'Debt' %}" class="navbar-brand p-0">
+                        <h1 class="m-0 text-uppercase text-primary">
+                            <img src="{% static 'img/ebe.jpg' %}" class="img-fluid rounded" style="width:80px; height:60px">
+                        </h1>
+                    </a>
+                {% endif %}
+
+            
+
 
             <!-- <i class="far fa-smile text-primary me-2"></i> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -90,11 +106,10 @@
                       
                     </div>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
-                    <a href="{% url 'kozi' %}" class="nav-item nav-link">Courses</a>
-                    <a href="{% url 'kozi' %}" class="nav-item nav-link">Coarse</a>
 
-                   
-                </div>
+                    <a href="{% url 'kozi' %}" class="nav-item nav-link">Courses</a>
+
+                  </div>
             </div>
         </nav>
         <!-- Navbar End -->
