--- a/apps/templates/index.html
+++ b/apps/templates/index.html
@@ -332,7 +332,7 @@ Thank you for being part of this journey. May God bless you.</p>
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="{% url 'admin:index' %}">login</a>. All Rights Reserved<a class="text-secondary border-bottom" href="https://htmlcodex.com"></a></p>
+        <p class="m-0"><a class="text-secondary border-bottom" href="{% url 'admin:index' %}">&copy; </a>. All Rights Reserved<a class="text-secondary border-bottom" href="https://htmlcodex.com"></a></p>
     </div>
     <!-- Footer End -->
 
